--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,18 @@
 {
+  "scripts": {
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.17"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
